[package]
name = "any_of"
version = "0.11.0"
edition = "2021"
description = "A general optional sum of product type which can be Neither, Left, Right or Both."
license = "MIT"
repository = "https://github.com/Trehinos/any_of"
categories = ["data-structures", "no-std"]
keywords = ["either", "any", "left", "right", "both"]

[dependencies]
